--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -63,7 +63,8 @@ body {
     list-style: none;
 }
 
-.navbar-features label, img {
+.navbar-features label,
+img {
     cursor: pointer;
 }
 
@@ -95,6 +96,7 @@ body {
     height: 100%;
     width: 100%;
 }
+
 #search:focus {
     outline: none;
 }
@@ -261,23 +263,6 @@ body {
 }
 
 /* END LOGIN */
-/* BASKET */
-
-.basket {
-    position: absolute;
-    display: none;
-    z-index: 1;
-    right: 0;
-    background-color: #d7f0ce8c;
-    border-radius: 5px;
-    box-shadow: 1px 3px 3px black;
-    width: 350px;
-    height: 300px;
-    transition: 0.5s ease;
-    transform: translateX(110%);
-}
-
-/* END BASKET */
 /* CAROUSEL */
 
 .carousel {
@@ -287,7 +272,8 @@ body {
 }
 
 .carousel-inner {
-    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);;
+    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+    ;
     border-radius: 5px;
 }
 
@@ -316,7 +302,7 @@ body {
 /* END CAROUSEL */
 /* CATEGORIES */
 
-.categories{
+.categories {
     margin-top: 35px;
 }
 
@@ -372,7 +358,8 @@ body {
 .warranty {
     position: relative;
     border-radius: 10px;
-    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);;
+    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+    ;
     background-color: #f0eeee;
     margin-top: 45px;
 }
@@ -418,7 +405,7 @@ body {
     margin-left: 55px;
 }
 
-.warranty .second ~ .third {
+.warranty .second~.third {
     margin: 0;
 }
 
@@ -430,8 +417,12 @@ body {
 /* PRODUCTS */
 
 .products .card {
-    box-shadow:  1px 3px 3px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
     background-color: #f0eeee;
+}
+
+.card {
+    border-radius: 5px;
 }
 
 .products .card-body {
@@ -562,13 +553,15 @@ body {
     height: 100%;
     width: 100%;
 }
+
 #email:focus {
     outline: none;
 }
 
 .sign {
     background-color: #1C490C;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    ;
     color: #fff;
     overflow-x: hidden;
     display: flex;
@@ -609,7 +602,7 @@ footer {
 
 footer ul {
     list-style: none;
-    color: rgba(0, 0, 0, 0.555); 
+    color: rgba(0, 0, 0, 0.555);
     font-size: 12;
 }
 
@@ -628,5 +621,5 @@ footer ul {
     text-align: center;
     bottom: -2px;
     width: 90%;
-    color: rgba(0, 0, 0, 0.555); 
+    color: rgba(0, 0, 0, 0.555);
 }
