--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -24,6 +24,7 @@ body {
     width: 100vw;
 }
 
+
 .newsletter span {
     color: #fff;
     font-size: 12px;
@@ -289,7 +290,7 @@ img {
     box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.356);;
     max-height: 380px;
     overflow-y: auto;
-    position: fixed;
+    position: absolute;
     right: 0;
     transform: translateX(110%);
     transition: 0.4s ease;
@@ -312,6 +313,50 @@ img {
     position: absolute;
     right: 10px;
     bottom: 10px;
+}
+
+.basket .add {
+    right: 70px;
+}
+
+.basket .one {
+    right: 40px;
+}
+
+.basket .total {
+    display: flex;
+    border: 1px solid rgba(0, 0, 0, 0.205);
+    border-radius: 5px;
+    width: 100%;
+    height: 60px;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.basket .total span {
+    color: black;
+    font-weight: 700;
+}
+
+.basket .purchase {
+    background: -webkit-linear-gradient(right, #184608, #659b08);
+    border-radius: 10px;
+    border: none;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.356);
+    color: #fff;
+    cursor: pointer;
+    font-size: medium;
+    height: 45px;
+    text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.5);
+    transition: .5s ease-out;
+    width: 120px;
+}
+
+.purchase:hover {
+    background: -webkit-linear-gradient(left, #184608, #659b08);
+    box-shadow: inset 1px 5px 5px rgba(0, 0, 0, 0.356);
 }
 
 /* END BASKET */
